# brads-badass-canary

./: BUILD  README.md  WORKSPACE  main.py  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
brads_badass_canary/: BUILD  __init__.py  deployer.py
brads_badass_canary/api_connections/: BUILD  __init__.py  deployer.py
brads_badass_canary/logic_app/: __init__.py  deployer.py
brads_badass_canary/templates/: BUILD  api-connection-deployment-tpl.json  logic-app-deployment-tpl.json  logic-app-template.json  teams-api-connection-tpl.json
canary/: BUILD.bazel  canary.bzl  deploy.py  deps.bzl
canary/private/: BUILD.bazel  common.bzl  repositories.bzl
templates/: canvas-notifications-app.json
