load("@rules_python//python:defs.bzl", "py_binary")
load(":canary.bzl", "deploy_canary")
exports_files(["canary.bzl", "deps.bzl"])

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]) + [
        "//canary/private:all_files",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_rules",
    srcs = glob(["*.bzl"]) + [
        "//canary/private:all_rules",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "deploy",
    srcs = ["deploy.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//brads_badass_canary:library"
    ]
)

deploy_canary(
    name = "canary-notification-app"
)
