load("@bazel_skylib//:bzl_library.bzl", "bzl_library")


config_setting(
    name = "strip-always",
    values = {"strip": "always"},
)

config_setting(
    name = "strip-sometimes",
    values = {"strip": "sometimes"},
)

config_setting(
    name = "strip-never",
    values = {"strip": "never"},
)

config_setting(
    name = "stamp",
    values = {"stamp": "true"},
)


bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//canary:__subpackages__"],
    # Don't list dependency on @bazel_tools//tools/build_defs/repo:http.bzl
    deps = [
        ":common",
    ],  # keep
)

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
    visibility = ["//canary:__subpackages__"],
)
